2002-12-12  Bart Veer  <bartv@ecoscentric.com>

	* include/stdlib.h: #include cyg_type.h, now that this header
	uses NORET attributes

2002-11-10  Nick Garnett  <nickg@ecoscentric.com>

	* include/sys/types.h: Add define/undefine for __NEED_FD_SETS_ONLY
	around include of sys/select.h to avoid circular dependencies in
	headers.

	* include/sys/select.h: Reorganized definitions so that the
	include from sys/types.h only defines the fd_set type and macros
	and not the select() and pselect() functions. The latter needs
	sigset_t from signal.h, which can result in circularity.

2002-04-09  Jonathan Larmour  <jlarmour@redhat.com>

	* include/stdlib.h: use NORET attributes from cyg_type.h.

2002-03-20  Jonathan Larmour  <jlarmour@redhat.com>

	* include/float.h: Don't have multiple inclusion protection. It is
	unnecessary and can confuse things if the headers are subject to two
	-I paths.
	* include/stdarg.h: Ditto.
	* include/float.h: Don't cover include_next with inclusion protection
	for a similar reason.
	* include/stddef.h: Use C comment.

2002-01-17  Jonathan Larmour  <jlarmour@redhat.com>

	* include/unistd.h: ftruncate() should use an off_t argument.

2002-01-15  Jonathan Larmour  <jlarmour@redhat.com>

	* include/sys/types.h: off_t should be signed.

2001-12-05  Jonathan Larmour  <jlarmour@redhat.com>

	* include/netdb.h (gethostbyname): anonymous arguments aren't allowed
	in C (I thought they were a GNU C extension, sigh).

2001-11-30  Jonathan Larmour  <jlarmour@redhat.com>
2001-11-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/netdb.h: Provide a default NULL implementation of
	struct hostent, gethostbyname and gethostbyaddr if a real implementation
	doesn't exist. This makes life easier for legacy code.

2001-10-17  Jesper Skov  <jskov@redhat.com>

	* cdl/isoinfra.cdl: Changed string interfaces to flavor booldata.

	* include/string.h: Changed feature checks to ifdef.

2001-10-09  Jonathan Larmour  <jlarmour@redhat.com>
